tests/sources/invalid/control_flow/unterminated_if_body.fire
// An `if` with a braceless body that has no statement at all before EOF.
fn main() -> int32 {  //~ ERROR FS-PARSE-0010 @20
    cond: bool = true;
    if (cond)
